--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -92,7 +92,7 @@
         android:layout_width="209dp"
         android:layout_height="80dp"
         android:layout_marginTop="80dp"
-        android:inputType="textMultiLine"
+        android:inputType="textMultiLine|text"
         android:text="@string/edInfo"
         android:textAlignment="textStart"
         android:textAllCaps="false"
